--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,11 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <name>confluent</name>
+            <url>https://packages.confluent.io/maven</url>
+        </repository>
+    </repositories>
 </project>
