--- a/vanilla/pom.xml
+++ b/vanilla/pom.xml
@@ -23,6 +23,13 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.0.0</version>
+            <scope>compile</scope>
+            <classifier>test</classifier>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.6</version>
